@@ -1,0 +1,3 @@
+body {
+  background: #fa0;
+}
